[package]
name = "tinytemplate-async"
version = "1.1.2"
authors = ["Sandeep Kumar <sandeepqmar05@gmail.com>"]

description = "Simple, lightweight template engine"
repository = "https://github.com/eternalfrustation/TinyTemplateAsync"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["template", "html"]
categories = ["template-engine"]

[badges]
travis-ci = { repository = "eternalfrustation/TinyTemplate" }
maintenance = { status = "passively-maintained" }

[dependencies]
log = "0.4.20"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_derive = "1.0"
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
